--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel --open firefox",
+    "start": "parcel",
     "build": "parcel build"
   },
   "author": "",
